--- a/src/global.css
+++ b/src/global.css
@@ -18,14 +18,6 @@ body {
   margin: 0;
   padding: 0;
   text-rendering: optimizeLegibility;
-  background-image: linear-gradient(
-    120deg,
-    #eea2a2 0,
-    #bbc1bf 19%,
-    #57c6e1 42%,
-    #b49fda 79%,
-    #7ac5d8 100%
-  );
   background-size: 400% 400%;
   background-position: var(--bg-position);
   transition: background-position 2s ease;
@@ -42,12 +34,51 @@ body {
 a {
   text-decoration: none;
   font-weight: bold;
-  color: white;
+  /*color: white;*/
 }
 
 a:active {
   color: blueviolet;
 }
 
-hr {
+.textTitle{
+  font-weight: bold;
+}
+
+@media (max-width: 991.98px) { 
+  .displayed{
+    display: none;
+  }
+  .playerViewer{
+    margin-top: 16rem;
+  }
+
+  .playerList{
+    margin-top: 24px;
+  }
+
+  .videoSearch{
+    width: 220px;
+    margin-left: 16px;
+  }
+
+}
+
+@media (min-width: 992px) { 
+  .displayed{
+    display: inline-block;
+  }
+  
+  .playerViewer{
+    margin-top: 9rem;
+  }
+
+  .playerList{
+    margin-top: 24px;
+  }
+
+  .videoSearch{
+    margin-left: 16px;
+    margin-right: 16px;
+  }
 }
