--- a/src/components/Player/video.css
+++ b/src/components/Player/video.css
@@ -2,6 +2,7 @@
     display: flex !important;
     align-items: center !important;
     cursor: pointer;
+    padding: 8px;
 }
 
 .video-item.item img {
